--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -31,30 +31,43 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FrigginAwesome, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\FrigginAwesome\FrigginAwesome.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BitmapRenderingSurface.cs" />
     <Compile Include="Color.cs" />
+    <Compile Include="DebugRenderingAlgorithm.cs" />
     <Compile Include="Geometry\IIntersectable.cs" />
-    <Compile Include="Geometry\Intersection.cs" />
-    <Compile Include="Geometry\IScene.cs" />
+    <Compile Include="Intersection.cs" />
+    <Compile Include="IScene.cs" />
     <Compile Include="Geometry\Sphere.cs" />
-    <Compile Include="IRayGenerator.cs" />
+    <Compile Include="ICamera.cs" />
+    <Compile Include="Imaging\BitmapImage.cs" />
+    <Compile Include="Imaging\ColorExtensions.cs" />
+    <Compile Include="Imaging\IImage.cs" />
+    <Compile Include="IRenderingAlgorithm.cs" />
+    <Compile Include="Materials\IMaterial.cs" />
+    <Compile Include="Math\IRandomNumberGenerator.cs" />
+    <Compile Include="Math\NaiveRandomNumberGenerator.cs" />
     <Compile Include="Math\Point.cs" />
     <Compile Include="Math\Ray.cs" />
     <Compile Include="Math\Vector.cs" />
+    <Compile Include="NaiveScene.cs" />
     <Compile Include="Pixel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ISurface.cs" />
+    <Compile Include="IRenderingSurface.cs" />
+    <Compile Include="RenderableGeometry.cs" />
     <Compile Include="Renderer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Imaging\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
