--- a/trunk/src/Kelly.Specs/Kelly.Specs.csproj
+++ b/trunk/src/Kelly.Specs/Kelly.Specs.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EqualitySpecs.cs" />
     <Compile Include="Geometry\SphereSpecs.cs" />
     <Compile Include="Math\MatrixSpecs.cs" />
     <Compile Include="PointSpecs.cs" />
