--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Materials\IMaterial.cs" />
     <Compile Include="Math\IRandomNumberGenerator.cs" />
     <Compile Include="Math\Matrix.cs" />
+    <Compile Include="Math\MatrixExtensions.cs" />
     <Compile Include="Math\NaiveRandomNumberGenerator.cs" />
     <Compile Include="Math\Point.cs" />
     <Compile Include="Math\Ray.cs" />
