--- a/trunk/src/Kelly.Console/Kelly.Console.csproj
+++ b/trunk/src/Kelly.Console/Kelly.Console.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{14453CA7-4864-46B3-B408-7AF6BD63F102}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{36D4CE20-6AB4-4F0F-B158-AD867EAFE121}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kelly</RootNamespace>
-    <AssemblyName>Kelly</AssemblyName>
+    <RootNamespace>Kelly.Console</RootNamespace>
+    <AssemblyName>Kelly.Console</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,46 +31,43 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FrigginAwesome, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Castle.Core, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\FrigginAwesome\FrigginAwesome.dll</HintPath>
+      <HintPath>..\..\libs\Castle\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.DynamicProxy2, Version=2.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle\Castle.DynamicProxy2.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitmapRenderingSurface.cs" />
-    <Compile Include="Color.cs" />
-    <Compile Include="DebugTracingAlgorithm.cs" />
-    <Compile Include="Geometry\IIntersectable.cs" />
-    <Compile Include="Intersection.cs" />
-    <Compile Include="IRenderer.cs" />
-    <Compile Include="IScene.cs" />
-    <Compile Include="Geometry\Sphere.cs" />
-    <Compile Include="ICamera.cs" />
-    <Compile Include="Imaging\BitmapImage.cs" />
-    <Compile Include="Imaging\ColorExtensions.cs" />
-    <Compile Include="Imaging\IImage.cs" />
-    <Compile Include="ITracingAlgorithm.cs" />
-    <Compile Include="Materials\IMaterial.cs" />
-    <Compile Include="Math\IRandomNumberGenerator.cs" />
-    <Compile Include="Math\Matrix.cs" />
-    <Compile Include="Math\MatrixExtensions.cs" />
-    <Compile Include="Math\NaiveRandomNumberGenerator.cs" />
-    <Compile Include="Math\Point.cs" />
-    <Compile Include="Math\Ray.cs" />
-    <Compile Include="Math\Vector.cs" />
-    <Compile Include="NaiveScene.cs" />
-    <Compile Include="Pixel.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IRenderingSurface.cs" />
-    <Compile Include="RenderableGeometry.cs" />
-    <Compile Include="TracingRenderer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Kelly\Kelly.csproj">
+      <Project>{14453CA7-4864-46B3-B408-7AF6BD63F102}</Project>
+      <Name>Kelly</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
