--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -44,10 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitmapRenderingSurface.cs" />
+    <Compile Include="BitmapRenderTarget.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="DebugTracingAlgorithm.cs" />
-    <Compile Include="Geometry\IIntersectable.cs" />
+    <Compile Include="IIntersectable.cs" />
     <Compile Include="Intersection.cs" />
     <Compile Include="IRenderer.cs" />
     <Compile Include="Geometry\Sphere.cs" />
@@ -55,6 +55,7 @@
     <Compile Include="Imaging\BitmapImage.cs" />
     <Compile Include="Imaging\ColorExtensions.cs" />
     <Compile Include="Imaging\IImage.cs" />
+    <Compile Include="ISampleGenerator.cs" />
     <Compile Include="ITracingAlgorithm.cs" />
     <Compile Include="Materials\IMaterial.cs" />
     <Compile Include="Math\IRandomNumberGenerator.cs" />
@@ -62,13 +63,15 @@
     <Compile Include="Math\MatrixExtensions.cs" />
     <Compile Include="Math\NaiveRandomNumberGenerator.cs" />
     <Compile Include="Math\Point.cs" />
+    <Compile Include="Math\Point2.cs" />
     <Compile Include="Math\Ray.cs" />
     <Compile Include="Math\Vector.cs" />
     <Compile Include="NaiveScene.cs" />
     <Compile Include="Pixel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IRenderingSurface.cs" />
+    <Compile Include="IRenderTarget.cs" />
     <Compile Include="RenderableGeometry.cs" />
+    <Compile Include="RenderTargetExtensions.cs" />
     <Compile Include="TracingRenderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
