--- a/trunk/src/Kelly.Sampling.Visualization/Kelly.Sampling.Visualization.csproj
+++ b/trunk/src/Kelly.Sampling.Visualization/Kelly.Sampling.Visualization.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6243C0EE-17C7-4AB0-9F53-57E00040E8D7}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{249B8C1B-C600-4AF8-9BCD-E4FE180EA496}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Kelly.Specs</RootNamespace>
-    <AssemblyName>Kelly.Specs</AssemblyName>
+    <RootNamespace>Kelly.Sampling.Visualization</RootNamespace>
+    <AssemblyName>Kelly.Sampling.Visualization</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Rhino.Mocks, Version=3.5.0.1, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+    <Reference Include="Castle.Core, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\Rhino\Rhino.Mocks.dll</HintPath>
+      <HintPath>..\..\libs\Castle\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.MicroKernel, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle\Castle.MicroKernel.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\Castle\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -46,39 +54,42 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="xunit, Version=1.1.0.1323, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\xUnit\xunit.dll</HintPath>
-    </Reference>
-    <Reference Include="xunit.extensions, Version=1.1.0.1323, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\xUnit\xunit.extensions.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Math\MatrixSpecs\When_comparing_two_matrices.cs" />
-    <Compile Include="Math\VectorSpecs\For_static_members.cs" />
-    <Compile Include="Math\VectorSpecs\When_calculating_cross_product.cs" />
-    <Compile Include="Math\VectorSpecs\When_calculating_the_dot_product_of_two_vectors.cs" />
-    <Compile Include="EqualitySpecs.cs" />
-    <Compile Include="Geometry\SphereSpecs.cs" />
-    <Compile Include="Math\MatrixSpecs\MatrixHelper.cs" />
-    <Compile Include="Math\VectorSpecs\The_IsUnit_property.cs" />
-    <Compile Include="Math\VectorSpecs\The_Length_property.cs" />
-    <Compile Include="Math\VectorSpecs\When_adding_two_vectors.cs" />
-    <Compile Include="Math\VectorSpecs\When_multiplying_a_vector_by_a_scalar.cs" />
-    <Compile Include="Math\VectorSpecs\When_subtracting_two_vectors.cs" />
-    <Compile Include="Math\VectorSpecs\The_SquaredLength_property.cs" />
-    <Compile Include="Math\VectorSpecs\When_converting_to_a_unit_vector.cs" />
-    <Compile Include="Math\MatrixSpecs\When_calculating_the_determinant_of_a_matrix.cs" />
-    <Compile Include="Math\MatrixSpecs\When_transposing_a_matrix.cs" />
-    <Compile Include="Math\MatrixSpecs\When_cloning_a_matrix.cs" />
-    <Compile Include="Math\MatrixSpecs\When_constructing_a_matrix_from_an_enumerable.cs" />
-    <Compile Include="Math\MatrixSpecs\When_constructing_a_matrix_from_a_multidimensional_array.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Math\RaySpecs\When_constructing_a_ray.cs" />
-    <Compile Include="Math\VectorSpecs\When_dividing_a_vector_by_a_scalar.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kelly\Kelly.csproj">
