--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -55,13 +55,13 @@
     <Compile Include="Imaging\BitmapImage.cs" />
     <Compile Include="Imaging\ColorExtensions.cs" />
     <Compile Include="Imaging\IImage.cs" />
-    <Compile Include="ISampleGenerator.cs" />
+    <Compile Include="Sampling\ISampleGenerator.cs" />
     <Compile Include="ITracingAlgorithm.cs" />
     <Compile Include="Materials\IMaterial.cs" />
-    <Compile Include="Math\IRandomNumberGenerator.cs" />
+    <Compile Include="IRandomNumberGenerator.cs" />
     <Compile Include="Math\Matrix.cs" />
     <Compile Include="Math\MatrixExtensions.cs" />
-    <Compile Include="Math\NaiveRandomNumberGenerator.cs" />
+    <Compile Include="NaiveRandomNumberGenerator.cs" />
     <Compile Include="Math\Point.cs" />
     <Compile Include="Math\Point2.cs" />
     <Compile Include="Math\Ray.cs" />
@@ -72,6 +72,7 @@
     <Compile Include="IRenderTarget.cs" />
     <Compile Include="RenderableGeometry.cs" />
     <Compile Include="RenderTargetExtensions.cs" />
+    <Compile Include="Sampling\RandomSampleGenerator.cs" />
     <Compile Include="SimpleCamera.cs" />
     <Compile Include="TracingRenderer.cs" />
   </ItemGroup>
