--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -55,13 +55,14 @@
     <Compile Include="Imaging\BitmapImage.cs" />
     <Compile Include="Imaging\ColorExtensions.cs" />
     <Compile Include="Imaging\IImage.cs" />
+    <Compile Include="Random\MerseneTwisterRandomNumberGenerator.cs" />
     <Compile Include="Sampling\ISampleGenerator.cs" />
     <Compile Include="ITracingAlgorithm.cs" />
     <Compile Include="Materials\IMaterial.cs" />
-    <Compile Include="IRandomNumberGenerator.cs" />
+    <Compile Include="Random\IRandomNumberGenerator.cs" />
     <Compile Include="Math\Matrix.cs" />
     <Compile Include="Math\MatrixExtensions.cs" />
-    <Compile Include="NaiveRandomNumberGenerator.cs" />
+    <Compile Include="Random\NaiveRandomNumberGenerator.cs" />
     <Compile Include="Math\Point.cs" />
     <Compile Include="Math\Point2.cs" />
     <Compile Include="Math\Ray.cs" />
