--- a/trunk/src/Kelly.Specs/Kelly.Specs.csproj
+++ b/trunk/src/Kelly.Specs/Kelly.Specs.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Math\MatrixSpecs\When_comparing_two_matrices.cs" />
+    <Compile Include="Math\MatrixSpecs\When_multiplying_a_matrix_by_a_point.cs" />
+    <Compile Include="Math\MatrixSpecs\When_multiplying_a_matrix_by_a_vector.cs" />
     <Compile Include="Math\VectorSpecs\For_static_members.cs" />
     <Compile Include="Math\VectorSpecs\When_calculating_cross_product.cs" />
     <Compile Include="Math\VectorSpecs\When_calculating_the_dot_product_of_two_vectors.cs" />
