--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Imaging\ColorExtensions.cs" />
     <Compile Include="Imaging\IImage.cs" />
     <Compile Include="IntegerExtensions.cs" />
+    <Compile Include="Math\Matrix %28object overrides%29.cs" />
+    <Compile Include="Math\Matrix %28statics%29.cs" />
+    <Compile Include="Math\Matrix %28operators%29.cs" />
     <Compile Include="Math\Vector2.cs" />
     <Compile Include="OrthogonalCamera.cs" />
     <Compile Include="RandomNumberGeneratorExtensions.cs" />
