--- a/trunk/src/Kelly.Specs/Kelly.Specs.csproj
+++ b/trunk/src/Kelly.Specs/Kelly.Specs.csproj
@@ -57,6 +57,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Math\EpsilonComparerSpecs\When_comparing_two_doubles.cs" />
+    <Compile Include="Math\EpsilonComparerSpecs\When_comparing_two_vectors.cs" />
     <Compile Include="Math\MatrixSpecs\When_comparing_two_matrices.cs" />
     <Compile Include="Math\MatrixSpecs\When_constructing_a_rotation_matrix.cs" />
     <Compile Include="Math\MatrixSpecs\When_inverting_a_matrix.cs" />
