--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -47,14 +47,15 @@
   <ItemGroup>
     <Compile Include="BitmapRenderTarget.cs" />
     <Compile Include="Color.cs" />
-    <Compile Include="DebugTracingAlgorithm.cs" />
+    <Compile Include="RayTracing\DebugTracingAlgorithm.cs" />
+    <Compile Include="Geometry\Triangle.cs" />
     <Compile Include="IIntersectable.cs" />
+    <Compile Include="ILight.cs" />
     <Compile Include="Intersection.cs" />
     <Compile Include="IRenderer.cs" />
     <Compile Include="Geometry\Sphere.cs" />
-    <Compile Include="Imaging\BitmapImage.cs" />
-    <Compile Include="Imaging\ColorExtensions.cs" />
-    <Compile Include="Imaging\IImage.cs" />
+    <Compile Include="ColorExtensions.cs" />
+    <Compile Include="IScene.cs" />
     <Compile Include="Materials\SolidMaterial.cs" />
     <Compile Include="Math\EpsilonComparer.cs" />
     <Compile Include="Math\IntegerExtensions.cs" />
@@ -63,12 +64,13 @@
     <Compile Include="Math\Matrix %28operators%29.cs" />
     <Compile Include="Math\DoubleExtensions.cs" />
     <Compile Include="Math\Vector2.cs" />
+    <Compile Include="PointLight.cs" />
     <Compile Include="Random\RandomNumberGeneratorExtensions.cs" />
     <Compile Include="Random\MerseneTwisterRandomNumberGenerator.cs" />
     <Compile Include="RenderingContext.cs" />
     <Compile Include="Sampling\CenterBiasedSampleGenerator.cs" />
     <Compile Include="Sampling\ISampleGenerator.cs" />
-    <Compile Include="ITracingAlgorithm.cs" />
+    <Compile Include="RayTracing\ITracingAlgorithm.cs" />
     <Compile Include="Materials\IMaterial.cs" />
     <Compile Include="Random\IRandomNumberGenerator.cs" />
     <Compile Include="Math\Matrix.cs" />
@@ -82,12 +84,12 @@
     <Compile Include="Pixel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IRenderTarget.cs" />
-    <Compile Include="RenderableGeometry.cs" />
+    <Compile Include="Renderable.cs" />
     <Compile Include="RenderTargetExtensions.cs" />
     <Compile Include="Sampling\RandomSampleGenerator.cs" />
     <Compile Include="Sampling\StratifiedRandomSampleGenerator.cs" />
     <Compile Include="Sampling\StratifiedSampleGenerator.cs" />
-    <Compile Include="TracingRenderer.cs" />
+    <Compile Include="RayTracing\TracingRenderer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
