--- a/trunk/src/Kelly.Specs/Kelly.Specs.csproj
+++ b/trunk/src/Kelly.Specs/Kelly.Specs.csproj
@@ -60,7 +60,6 @@
   <ItemGroup>
     <Compile Include="BitmapRenderTargetSpecs\When_setting_a_pixel_color.cs" />
     <Compile Include="ColorSpecs\When_converting_a_color_to_a_System_Drawing_Color.cs" />
-    <Compile Include="Geometry\PlyParserSpecs\When_parsing_a_ply_file_from_a_TextReader.cs" />
     <Compile Include="Math\EpsilonComparerSpecs\When_comparing_two_doubles.cs" />
     <Compile Include="Math\EpsilonComparerSpecs\When_comparing_two_vectors.cs" />
     <Compile Include="Math\MatrixSpecs\When_comparing_two_matrices.cs" />
@@ -92,6 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Math\RaySpecs\When_constructing_a_ray.cs" />
     <Compile Include="Math\VectorSpecs\When_dividing_a_vector_by_a_scalar.cs" />
+    <Compile Include="Resources\TrimeshLoaderSpecs\When_loading_a_mesh_from_a_stream.cs" />
     <Compile Include="Sampling\When_generating_stratified_random_samples.cs" />
     <Compile Include="Sampling\When_generating_stratified_samples.cs" />
   </ItemGroup>
