--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Geometry\Mesh.cs" />
     <Compile Include="Geometry\MeshTriangle.cs" />
     <Compile Include="Resources\MeshLoader.cs" />
+    <Compile Include="Resources\MeshSerializer.cs" />
     <Compile Include="Resources\TrimeshLoader.cs" />
     <Compile Include="RayTracing\DebugTracingAlgorithm.cs" />
     <Compile Include="Geometry\Triangle.cs" />
