--- a/trunk/src/Kelly.Specs/Kelly.Specs.csproj
+++ b/trunk/src/Kelly.Specs/Kelly.Specs.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="BitmapRenderTargetSpecs\When_setting_a_pixel_color.cs" />
     <Compile Include="ColorSpecs\When_converting_a_color_to_a_System_Drawing_Color.cs" />
+    <Compile Include="Geometry\TriangleSpecs\When_finding_the_intersection_of_a_ray_with_a_triangle.cs" />
     <Compile Include="Math\EpsilonComparerSpecs\When_comparing_two_doubles.cs" />
     <Compile Include="Math\EpsilonComparerSpecs\When_comparing_two_vectors.cs" />
     <Compile Include="Math\MatrixSpecs\When_comparing_two_matrices.cs" />
@@ -73,7 +74,7 @@
     <Compile Include="Math\VectorSpecs\When_calculating_cross_product.cs" />
     <Compile Include="Math\VectorSpecs\When_calculating_the_dot_product_of_two_vectors.cs" />
     <Compile Include="EqualitySpecs.cs" />
-    <Compile Include="Geometry\SphereSpecs\When_intersecting_with_a_ray.cs" />
+    <Compile Include="Geometry\SphereSpecs\When_finding_the_intersection_of_a_ray_with_a_sphere.cs" />
     <Compile Include="Math\MatrixSpecs\MatrixHelper.cs" />
     <Compile Include="Math\VectorSpecs\The_IsUnit_property.cs" />
     <Compile Include="Math\VectorSpecs\The_Length_property.cs" />
