TONS of perf optimizations.
We are now nearly 8x as fast on the simple visualizations I've been running (that's right, 800%).

BitmapRenderTarget has been deprecated because it's too slow. Use MemoryRenderTarget instead and use ToBitmap to convert it to a System.Drawing.Bitmap instance. THIS IS MUCH FASTER. Setting pixels doesn't even show up in the profiler anymore.

Optimized CrossProduct. It was multiplying with the unit vectors to obtain its result. While that's correct from a mathematical perspective, it's also unnecessary and redundant.

--- a/trunk/src/Kelly.Visualization/Kelly.Visualization.csproj
+++ b/trunk/src/Kelly.Visualization/Kelly.Visualization.csproj
@@ -43,6 +43,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\libs\Castle\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="FrigginAwesome, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\FrigginAwesome\FrigginAwesome.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
