--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -50,6 +50,7 @@
     <Compile Include="AccelerationStructures\BoudingVolumeHeirarcy.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="AccelerationStructures\AxisAlignedBoundingBox.cs" />
+    <Compile Include="Math\Point %28operators%29.cs" />
     <Compile Include="MemoryRenderTarget.cs" />
     <Compile Include="MemoryRenderTargetExtensions.cs" />
     <Compile Include="Resources\IMeshLoader.cs" />
