--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -47,9 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitmapRenderTarget.cs" />
-    <Compile Include="AccelerationStructures\BoudingVolumeHeirarcy.cs" />
+    <Compile Include="AccelerationStructures\BoundingVolumnHeirarchies\BvhNode.cs" />
     <Compile Include="Color.cs" />
-    <Compile Include="AccelerationStructures\AxisAlignedBoundingBox.cs" />
+    <Compile Include="AxisAlignedBoundingBox.cs" />
     <Compile Include="Math\Point %28operators%29.cs" />
     <Compile Include="MemoryRenderTarget.cs" />
     <Compile Include="MemoryRenderTargetExtensions.cs" />
