--- a/trunk/src/Kelly.Specs/Kelly.Specs.csproj
+++ b/trunk/src/Kelly.Specs/Kelly.Specs.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6243C0EE-17C7-4AB0-9F53-57E00040E8D7}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -71,6 +71,7 @@
     <Compile Include="Math\MatrixSpecs\When_multiplying_a_matrix_by_a_point.cs" />
     <Compile Include="Math\MatrixSpecs\When_multiplying_a_matrix_by_a_scalar.cs" />
     <Compile Include="Math\MatrixSpecs\When_multiplying_a_matrix_by_a_vector.cs" />
+    <Compile Include="Math\PointSpecs\When_finding_the_element_wise_min_of_two_points.cs" />
     <Compile Include="Math\VectorSpecs\For_static_members.cs" />
     <Compile Include="Math\VectorSpecs\When_calculating_cross_product.cs" />
     <Compile Include="Math\VectorSpecs\When_calculating_the_dot_product_of_two_vectors.cs" />
