--- a/trunk/src/Kelly/Kelly.csproj
+++ b/trunk/src/Kelly/Kelly.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{14453CA7-4864-46B3-B408-7AF6BD63F102}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -53,6 +53,8 @@
     <Compile Include="AxisAlignedBoundingBox.cs" />
     <Compile Include="Math\Axis.cs" />
     <Compile Include="Math\Point %28operators%29.cs" />
+    <Compile Include="Math\Vector %28operators%29.cs" />
+    <Compile Include="Math\Vector %28statics%29.cs" />
     <Compile Include="MemoryRenderTarget.cs" />
     <Compile Include="MemoryRenderTargetExtensions.cs" />
     <Compile Include="Resources\IMeshLoader.cs" />
