--- a/trunk/src/Kelly.Specs/Kelly.Specs.csproj
+++ b/trunk/src/Kelly.Specs/Kelly.Specs.csproj
@@ -96,7 +96,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Math\RaySpecs\When_constructing_a_ray.cs" />
     <Compile Include="Math\VectorSpecs\When_dividing_a_vector_by_a_scalar.cs" />
-    <Compile Include="Resources\TrimeshLoaderSpecs\When_loading_a_mesh_from_a_stream.cs" />
     <Compile Include="Sampling\When_generating_stratified_random_samples.cs" />
     <Compile Include="Sampling\When_generating_stratified_samples.cs" />
   </ItemGroup>
@@ -105,6 +104,9 @@
       <Project>{14453CA7-4864-46B3-B408-7AF6BD63F102}</Project>
       <Name>Kelly</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
